[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/cards/card.png" type="Texture" id=1]
[ext_resource path="res://assets/background/background1.png" type="Texture" id=2]
[ext_resource path="res://src/battle/card_related/LetterSlots.gd" type="Script" id=3]
[ext_resource path="res://src/battle/Battle.gd" type="Script" id=4]
[ext_resource path="res://assets/cards/discard.png" type="Texture" id=5]
[ext_resource path="res://assets/battle/enter_button.png" type="Texture" id=6]
[ext_resource path="res://assets/battle/enter_button_valid.png" type="Texture" id=7]
[ext_resource path="res://assets/Characters/character_art/evan_60x60.png" type="Texture" id=8]
[ext_resource path="res://src/battle/player_enemy/Enemy.gd" type="Script" id=9]
[ext_resource path="res://src/battle/player_enemy/Player.gd" type="Script" id=10]
[ext_resource path="res://assets/Characters/character_art/luke_60x60.png" type="Texture" id=11]
[ext_resource path="res://src/battle/player_enemy/EffectIconDisplay.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/effect_icons/3.png" type="Texture" id=13]
[ext_resource path="res://assets/effect_icons/1.png" type="Texture" id=14]
[ext_resource path="res://assets/effect_icons/2.png" type="Texture" id=15]
[ext_resource path="res://assets/battle/bottom_bar.png" type="Texture" id=16]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.356863, 0.894118, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0, 0, 1 )

[node name="Battle" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 953, 542 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="Deck" type="Sprite" parent="."]
position = Vector2( 1756, 535 )
scale = Vector2( 0.6, 0.6 )
z_index = 1
texture = ExtResource( 1 )

[node name="Discard" type="Sprite" parent="."]
position = Vector2( 216, 540 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )

[node name="LetterSlots" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Cards" type="Node" parent="."]

[node name="SubmitWord" type="TextureButton" parent="."]
margin_left = 1512.0
margin_top = 513.0
margin_right = 1612.0
margin_bottom = 563.0
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="Player" type="Sprite" parent="."]
position = Vector2( 472, 130 )
texture = ExtResource( 8 )
centered = false
script = ExtResource( 10 )

[node name="Healthbar" type="ProgressBar" parent="Player"]
margin_left = -58.0
margin_top = 123.0
margin_right = 117.0
margin_bottom = 153.0
custom_styles/fg = SubResource( 1 )
percent_visible = false

[node name="Indicators" type="Node" parent="Player"]

[node name="0" parent="Player/Indicators" instance=ExtResource( 12 )]
position = Vector2( 423, 90 )

[node name="1" parent="Player/Indicators" instance=ExtResource( 12 )]
position = Vector2( 464, 89 )
texture = ExtResource( 14 )

[node name="2" parent="Player/Indicators" instance=ExtResource( 12 )]
position = Vector2( 506, 92 )
texture = ExtResource( 15 )

[node name="3" parent="Player/Indicators" instance=ExtResource( 12 )]
position = Vector2( 552, 89 )
texture = ExtResource( 13 )

[node name="Enemy" type="Sprite" parent="."]
position = Vector2( 1279, 145 )
texture = ExtResource( 11 )
centered = false
script = ExtResource( 9 )

[node name="Healthbar" type="ProgressBar" parent="Enemy"]
margin_left = -55.0
margin_top = 71.0
margin_right = 120.0
margin_bottom = 101.0
custom_styles/fg = SubResource( 2 )
percent_visible = false

[node name="Indicators" type="Node" parent="Enemy"]

[node name="0" parent="Enemy/Indicators" instance=ExtResource( 12 )]
position = Vector2( 1230, 105 )

[node name="1" parent="Enemy/Indicators" instance=ExtResource( 12 )]
position = Vector2( 1271, 104 )
texture = ExtResource( 14 )

[node name="2" parent="Enemy/Indicators" instance=ExtResource( 12 )]
position = Vector2( 1313, 107 )
texture = ExtResource( 15 )

[node name="3" parent="Enemy/Indicators" instance=ExtResource( 12 )]
position = Vector2( 1359, 104 )
texture = ExtResource( 13 )

[node name="BottomBar" type="Sprite" parent="."]
position = Vector2( 990, 1032 )
scale = Vector2( 2, 2 )
z_index = 1
texture = ExtResource( 16 )

[connection signal="button_down" from="SubmitWord" to="." method="_submit_word"]
[connection signal="value_changed" from="Player/Healthbar" to="." method="_on_player_damaged"]
[connection signal="value_changed" from="Enemy/Healthbar" to="." method="_on_enemy_damaged"]
